--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<hutool.version>4.5.7</hutool.version>
+		<mybatis-generator.version>1.3.7</mybatis-generator.version>
+		<mybatis.version>3.4.6</mybatis.version>
+		<mysql-connector.version>8.0.15</mysql-connector.version>
+		<pagehelper.version>5.1.8</pagehelper.version>
+		<pagehelper-starter.version>1.2.10</pagehelper-starter.version>
+		<druid.version>1.1.10</druid.version>
+		<spring-data-commons.version>2.1.5.RELEASE</spring-data-commons.version>
 	</properties>
 
 	<!--设定主仓库，按设定顺序进行查找-->
@@ -67,23 +75,59 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!--Mybatis分页插件-->
+		<!-- MyBatis-->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>${mybatis.version}</version>
+		</dependency>
+		<!--MyBatis分页插件starter-->
 		<dependency>
 			<groupId>com.github.pagehelper</groupId>
 			<artifactId>pagehelper-spring-boot-starter</artifactId>
-			<version>1.2.10</version>
+			<version>${pagehelper-starter.version}</version>
+		</dependency>
+		<!--Mybatis分页插件-->
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>${pagehelper.version}</version>
+		</dependency>
+		<!-- MyBatis 生成器 -->
+		<dependency>
+			<groupId>org.mybatis.generator</groupId>
+			<artifactId>mybatis-generator-core</artifactId>
+			<version>${mybatis-generator.version}</version>
 		</dependency>
 		<!--集成druid连接池-->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid-spring-boot-starter</artifactId>
-			<version>1.1.10</version>
+			<version>${druid.version}</version>
 		</dependency>
 		<!--Mysql数据库驱动-->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.15</version>
+			<version>${mysql-connector.version}</version>
+		</dependency>
+		<!--Hutool Java工具包-->
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>${hutool.version}</version>
+		</dependency>
+		<!--SpringData工具包-->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+			<version>${spring-data-commons.version}</version>
+		</dependency>
+		<!--lombok-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
