--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,14 @@
-
-server:
-  port: 8080
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/hwjl?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username: root
+    password: 123456
+    druid:
+      initial-size: 1  # 连接池初始化大小
+      min-idle: 5     # 最小空闲连接数
+      max-active:  10
+      web-stat-filter:
+        exclusions:  "*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*"  #不统计这些请求数据
+      stat-view-servlet: #访问监控网页的登录用户名和密码
+        login-username: druid
+        login-password: druid
