--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,11 @@
 
 server:
   port: 8080
+spring:
+  profiles:
+    active: dev
+mybatis:
+  mapper-locations:
+   - classpath: mapper/*.xml          # mbg生成的mapper文件
+   - classpath: com/**/mapper/*.xml   # 自定义的mapper文件
+
