--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,12 +5,10 @@ spring:
   profiles:
     active: dev
 mybatis:
-  mapper-locations:
-   - classpath: mapper/*.xml          # mbg生成的mapper文件
-   - classpath: com/**/mapper/*.xml   # 自定义的mapper文件
+  mapper-locations: classpath:mapper/*.xml
 logging:
   config: classpath:logback-spring.xml
-  level:        # 打印sql语句
+  level:
     dao: debug
     org:
       mybatis: debug
