一些小问题修改

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     active: dev
 mybatis:
   mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.liao.hw.mbg.entity
 logging:
   config: classpath:logback-spring.xml
   level:
