--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<spring-data-commons.version>2.1.5.RELEASE</spring-data-commons.version>
 		<swagger2.version>2.7.0</swagger2.version>
 		<swagger-ui.version>2.7.0</swagger-ui.version>
+		<weixin-java.version>3.5.0</weixin-java.version>
 	</properties>
 
 	<!--设定主仓库，按设定顺序进行查找-->
@@ -141,7 +142,18 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${swagger-ui.version}</version>
 		</dependency>
-
+		<!--引入wx-java-->
+		<dependency>
+			<groupId>com.github.binarywang</groupId>
+			<artifactId>weixin-java-miniapp</artifactId>
+			<version>${weixin-java.version}</version>
+		</dependency>
+		<!--wx-java 的自动配置-->
+		<dependency>
+			<groupId>com.github.binarywang</groupId>
+			<artifactId>wx-java-miniapp-spring-boot-starter</artifactId>
+			<version>${weixin-java.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
