--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,3 +1,15 @@
 
 server:
   port: 80
+spring:
+  datasource:
+    url: jdbc:mysql://39.108.230.146:3306/hwjl?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username: liao
+    password: forever522.
+    druid:
+      initial-size: 1  # 连接池初始化大小
+      min-idle: 5     # 最小空闲连接数
+      max-active:  10
+# 路径配置
+apiPath: api
+adminPath: admin
